[package]
name = "rovella"
version = "0.1.0"
authors = ["JMBenson01 <jackiemartinbenson@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "rovella"
path = "src/main.rs"

[dependencies]
rovella_logger = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser","libloaderapi", "synchapi",
    "errhandlingapi", "winbase", "ntdef", "windef", "windowsx"] }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "0.10.1"
x11 = "2.19.1"
libc = "0.2.126"