[package]
name = "rovella"
version = "0.1.4"
authors = ["JMBenson01 <jackiemartinbenson@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"
build = "build.rs"
categories = ["game-development", "game-engines", ]
keywords = ["game-engine", "platform", "windowing", "winapi", "xcb"]
description = "A game library that, at present, only consists of a windowing and events wrapper"
readme = "README.md"

[lib]
name = "rovella"
path = "src/main.rs"

[dependencies]
rovella_logger = "0.1.3"
raw-window-handle = "0.4.2"
wgpu = "0.13"
futures = "0.3.21"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser","libloaderapi", "synchapi",
    "errhandlingapi", "winbase", "ntdef", "windef", "windowsx"] }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "0.10.1"
x11 = "2.19.1"
libc = "0.2.126"